feat: implementacao classe Helper para vavalidacao dos junits nas camadas atÃe transaction (types). proximo passo será a implementaçcao das transacoes de transferencia